--- a/CSS/index.html
+++ b/CSS/index.html
@@ -12,7 +12,7 @@
         <div class="centerdiv">
             <div class="header">
                 <div class="logo">
-                    <img src="../Images/logo.png" alt="" height="105">
+                    <img src="../Images/logo-removebg-preview.png" alt="" height="105">
                 </div>
                 <div class="navbar">
                     <li> <a href="#">HOME</a> </li>
@@ -20,7 +20,7 @@
                     <li> <a href="#">OUR ALBUM</a> </li>
                     <li> <a href="#">BLOG</a> </li>
                     <li> <a href="#">CONTACT US</a> </li>
-
+                    <button>Explore Work</button>
                 </div>
             </div>
             <div class="banner"></div>
