Added more css properties to the banner

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -23,9 +23,22 @@
                     <button>Explore Work</button>
                 </div>
             </div>
-            <div class="banner"></div>
+            <div class="banner">
+                <p>
+                    Hey! I am Daniel a professional Photographer ready <br> to convert your best moments into graphics. <br>Let's Try This
+                </p>
+                <button>See My Work</button>
+            </div>
         </div>
 
+    </section>
+    <!-- END OF SECTION ONE -->
+
+    <!-- START OF SECTION TWO -->
+    <section class="sectiontwo">
+        <div class="centerdiv">
+            
+        </div>
     </section>
 </body>
 </html>
