--- a/CSS/index.html
+++ b/CSS/index.html
@@ -37,7 +37,10 @@
     <!-- START OF SECTION TWO -->
     <section class="sectiontwo">
         <div class="centerdiv">
-            
+            <h3>Dans Photography Showcase Center</h3>
+            <p>Welcome to Dan's Photography, where every image tells a unique story through the lens of a passionate artist, Dan Smith. With a camera in hand and an eye for capturing the extraordinary in the ordinary, Dan's journey into the world of photography has been nothing short of inspiring.</p>
+            <p>Beyond the lens, Dan is an advocate for the art form he loves. Through workshops, exhibitions, and insightful tutorials, he shares his knowledge and nurtures the budding photographers of tomorrow. His dedication to fostering a community of like-minded individuals is a testament to his belief that photography is not just a medium—it's a language that transcends boundaries and speaks to the soul.</p>
+            <p>Join Dan on this visual odyssey through life's grand tapestry. Every click of his camera shutter echoes with the passion that fuels his creative spirit. As you explore Dan's Photography, be prepared to embark on a sensory journey that celebrates the profound beauty of our world, as seen through the discerning eyes of a remarkable artist.</p>
         </div>
     </section>
 </body>
