Added the sketeton of the album

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -44,5 +44,25 @@
             <button>VIEW MORE</button>
         </div>
     </section>
+    <!-- END OF SECTION TWO -->
+
+    <!-- START OF SECTION THREE -->
+    <section class="sectionthree">
+        <div class="maindiv">
+            <h1>Our Album</h1>
+            <div class="albumDiv">
+                <div class="upperdiv">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                </div>
+                <div class="lowerdiv">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
