Added Photographers secction

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -64,5 +64,13 @@
             </div>
         </div>
     </section>
+    <!-- END OF SECTION THREE -->
+
+    <!-- START OF SECTION FOUR -->
+    <section class="sectionfour">
+        <div class="maindiv">
+            
+        </div>
+    </section>
 </body>
 </html>
