Added Photographers Section

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -69,7 +69,30 @@
     <!-- START OF SECTION FOUR -->
     <section class="sectionfour">
         <div class="maindiv">
-            
+            <div class="description">
+                <h1>Our Photographers</h1>
+                <p>The following are our photographers who work for the Dans Photography.</p>
+            </div>
+            <div class="people">
+                <div class="photographer1">
+                    <img src="../Images/pexels-andrea-piacquadio-3762940.jpg" alt="" height="215">
+                    <p>Name:Tess Moraa</p>
+                    <p><a href="#">Phone: +25471234566</a></p>
+                    <p><a href="#">Email: tessmoraa33@gmail.com</a></p>
+                </div>
+                <div class="photographer2">
+                    <img src="../Images/Indian.jpg" alt="" height="215">
+                    <p>Name:Tess Moraa</p>
+                    <p><a href="#">Phone: +25471234566</a></p>
+                    <p><a href="#">Email: tessmoraa33@gmail.com</a></p>
+                </div>
+                <div class="photographer3">
+                    <img src="../Images/Black_American.jpg" alt="" height="215">
+                    <p>Name:Tess Moraa</p>
+                    <p><a href="#">Phone: +25471234566</a></p>
+                    <p><a href="#">Email: tessmoraa33@gmail.com</a></p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
