Added the footer section

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -102,6 +102,9 @@
         <div class="centerdiv">
             
         </div>
+        <div class="footer">
+            <p> © Dans Photography2023 </p>
+        </div>
     </section>
 </body>
 </html>
