Added a form to my website

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -79,18 +79,19 @@
                     <p>Name:Tess Moraa</p>
                     <p><a href="#"><span>Phone:</span> +25471234566</a></p>
                     <p><a href="#"><span>Email:</span> tessmoraa33@gmail.com</a></p>
+                    <p>Tess is a </p>
                 </div>
                 <div class="photographer2">
                     <img src="../Images/Indian.jpg" alt="" height="215">
-                    <p>Name:Tess Moraa</p>
-                    <p><a href="#"><span>Phone:</span> +25471234566</a></p>
-                    <p><a href="#"><span>Email:</span> tessmoraa33@gmail.com</a></p>
+                    <p>Name: Abdi Ali</p>
+                    <p><a href="#"><span>Phone:</span> +2547987655</a></p>
+                    <p><a href="#"><span>Email:</span> aliabdi@gmail.com</a></p>
                 </div>
                 <div class="photographer3">
                     <img src="../Images/Black_American.jpg" alt="" height="215">
-                    <p>Name:Tess Moraa</p>
-                    <p><a href="#"><span>Phone:</span> +25471234566</a></p>
-                    <p><a href="#"><span>Email:</span> tessmoraa33@gmail.com</a></p>
+                    <p>Name: Jordan Mohammed</p>
+                    <p><a href="#"><span>Phone:</span> +2547127786</a></p>
+                    <p><a href="#"><span>Email:</span> jordanmoha@gmail.com</a></p>
                 </div>
             </div>
         </div>
@@ -100,7 +101,11 @@
     <!-- Start of section Five -->
     <section class="sectionfive">
         <div class="centerdiv">
-            
+            <div class="form">
+                <label for="Please enter your Request here: "></label>
+                <input type="text" placeholder="Enter Your Request here:">
+                <button>Submit</button>
+            </div>
         </div>
         <div class="footer">
             <p> © Dans Photography2023 </p>
