Added A contacts and submission form to my Website

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -102,9 +102,16 @@
     <section class="sectionfive">
         <div class="centerdiv">
             <div class="form">
-                <label for="Please enter your Request here: "></label>
+                <div class="label"><label for=" ">Please enter your Request here:</label></div>
                 <input type="text" placeholder="Enter Your Request here:">
-                <button>Submit</button>
+                <div class="button"><button>Submit</button></div>
+            </div>
+            <div class="contacts">
+                <p>
+                    <strong>Email: </strong>dansphotography@gmail.com <br>
+                    <strong>Phone: </strong>+254719769929 <br>
+                    <strong>Location: </strong>Nairobi, Kenya
+                </p>
             </div>
         </div>
         <div class="footer">
