Finished Designing my Last section

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -104,7 +104,6 @@
             <div class="form">
                 <div class="label"><label for=" ">Please enter your Request here:</label></div>
                 <input type="text" placeholder="Enter Your Request here:">
-                
                 <div class="label"><label for=" ">Any Thing You Wish Us to Know;</label></div>
                 <input type="text">
                 <div class="button"><button>Submit</button></div>
@@ -121,5 +120,7 @@
             <p> © Dans Photography2023 </p>
         </div>
     </section>
+    <!-- End of section five -->
+    <!-- End of the project -->
 </body>
 </html>
