Added live links of my work

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -20,14 +20,14 @@
                     <li> <a href="#">OUR ALBUM</a> </li>
                     <li> <a href="#">BLOG</a> </li>
                     <li> <a href="#">CONTACT US</a> </li>
-                    <button>Explore Work</button>
+                    <button><a target="_blank" href="https://myalbum.com/album/aPcPC5SPf53K6P/?invite=6f57dd83-8323-4c81-9119-4a50e10762e9">My Work</a></button>
                 </div>
             </div>
             <div class="banner">
                 <p>
-                    Hey! I am Daniel a professional Photographer ready <br> to convert your best moments into graphics. <br>Let's Try This
+                    Hey! Welcome to Dans photography, we are ready <br> to convert your best moments into graphics. <br>Let's Try This.
                 </p>
-                <button>See My Work</button>
+                <button><a target="_blank" href="https://myalbum.com/album/aPcPC5SPf53K6P/?invite=6f57dd83-8323-4c81-9119-4a50e10762e9">My Work</a></button>
             </div>
         </div>
 
@@ -75,23 +75,25 @@
             </div>
             <div class="people">
                 <div class="photographer1">
-                    <img src="../Images/pexels-andrea-piacquadio-3762940.jpg" alt="" height="215">
+                    <img src="../Images/pexels-andrea-piacquadio-3762940.jpg" alt="" height="150" width="150">
                     <p>Name:Tess Moraa</p>
                     <p><a href="#"><span>Phone:</span> +25471234566</a></p>
                     <p><a href="#"><span>Email:</span> tessmoraa33@gmail.com</a></p>
-                    <p>Tess is a </p>
+                    <p>Tess is a highly experienced photographer who has worked for Jay Z for some years. She likes covering live events of celebrities. She also acted as a co-producer in Drakes' Gods Plan. She has a total of 10 albums</p>
                 </div>
                 <div class="photographer2">
-                    <img src="../Images/Indian.jpg" alt="" height="215">
+                    <img src="../Images/Indian.jpg" alt="" height="150" width="150">
                     <p>Name: Abdi Ali</p>
                     <p><a href="#"><span>Phone:</span> +2547987655</a></p>
                     <p><a href="#"><span>Email:</span> aliabdi@gmail.com</a></p>
+                    <p>Ali is passionate about wildlife photography. He also does wedding photography and videography. He has been featured by CNN for three times now.By now, He has a total of 14 albums</p>
                 </div>
                 <div class="photographer3">
-                    <img src="../Images/Black_American.jpg" alt="" height="215">
+                    <img src="../Images/Black_American.jpg" alt="" height="150" width="150">
                     <p>Name: Jordan Mohammed</p>
                     <p><a href="#"><span>Phone:</span> +2547127786</a></p>
                     <p><a href="#"><span>Email:</span> jordanmoha@gmail.com</a></p>
+                    <p>Jordan, who owns a Graphic Design bachelors degree from harvard university makes our work look more interesting. He edits the photos. He has a total of 10 photo albums and 5 video albums.</p>
                 </div>
             </div>
         </div>
