Added hover properties to my albums

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -52,14 +52,39 @@
             <h1>Our Album</h1>
             <div class="albumDiv">
                 <div class="upperdiv">
-                    <div class="one"></div>
-                    <div class="two"></div>
-                    <div class="three"></div>
+                    <div class="one">
+                        <div class="Baby">
+                            <p><a href="">Baby Photography</a></p>
+    
+                        </div>
+                    </div>
+                    <div class="two">
+                        <div class="Fashion">
+                            <p><a href="">Fashion Photography</a></p>
+                        </div>
+                    </div>
+                    <div class="three">
+                        <div class="Graduation">
+                            <p><a href="">Graduation Photography</a></p>
+                        </div>
+                    </div>
                 </div>
                 <div class="lowerdiv">
-                    <div class="one"></div>
-                    <div class="two"></div>
-                    <div class="three"></div>
+                    <div class="one">
+                        <div class="Sports">
+                            <p><a href="">Sports Photography</a></p>
+                        </div>
+                    </div>
+                    <div class="two">
+                        <div class="Wedding">
+                            <p><a href="">Wedding Photography</a></p>
+                        </div>
+                    </div>
+                    <div class="three">
+                        <div class="Wildlife">
+                            <p><a href="">Wildlife Photography</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
