Added links to my albums

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -54,35 +54,35 @@
                 <div class="upperdiv">
                     <div class="one">
                         <div class="Baby">
-                            <p><a href="">Baby Photography</a></p>
+                            <p><a target="_blank" href="https://www.pexels.com/search/baby/">Baby Photography</a></p>
     
                         </div>
                     </div>
                     <div class="two">
                         <div class="Fashion">
-                            <p><a href="">Fashion Photography</a></p>
+                            <p><a target="_blank" href="https://www.pexels.com/search/fashion/">Fashion Photography</a></p>
                         </div>
                     </div>
                     <div class="three">
                         <div class="Graduation">
-                            <p><a href="">Graduation Photography</a></p>
+                            <p><a target="_blank" href="https://www.pexels.com/search/graduation/">Graduation Photography</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="lowerdiv">
                     <div class="one">
                         <div class="Sports">
-                            <p><a href="">Sports Photography</a></p>
+                            <p><a target="_blank" href="https://www.pexels.com/search/sports/">Sports Photography</a></p>
                         </div>
                     </div>
                     <div class="two">
                         <div class="Wedding">
-                            <p><a href="">Wedding Photography</a></p>
+                            <p><a target="_blank" href="https://www.pexels.com/search/wedding/">Wedding Photography</a></p>
                         </div>
                     </div>
                     <div class="three">
                         <div class="Wildlife">
-                            <p><a href="">Wildlife Photography</a></p>
+                            <p><a target="_blank" href="https://www.pexels.com/search/wildlife/">Wildlife Photography</a></p>
                         </div>
                     </div>
                 </div>
