Added a Media section on my last section

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -12,7 +12,7 @@
         <div class="centerdiv">
             <div class="header">
                 <div class="logo">
-                    <img src="../Images/logo-removebg-preview.png" alt="" height="105">
+                    <a href="#"><img src="../Images/logo-removebg-preview.png" alt="" height="105"></a>
                 </div>
                 <div class="navbar">
                     <li> <a href="#">HOME</a> </li>
@@ -141,6 +141,9 @@
                     <strong>Phone: </strong>+254719769929 <br>
                     <strong>Location: </strong>Nairobi, Kenya
                 </p>
+            </div>
+            <div class="media">
+                
             </div>
         </div>
         <div class="footer">
