--- a/CSS/index.html
+++ b/CSS/index.html
@@ -143,7 +143,10 @@
                 </p>
             </div>
             <div class="media">
-                
+                <a href=""><img src="../Images/facebook.png" alt=""></a>
+                <a href=""><img src="../Images/instagram.png" alt=""></a>
+                <a href=""><img src="../Images/tik-tok.png" alt=""></a>
+                <a href=""><img src="../Images/snapchat.png" alt=""></a>
             </div>
         </div>
         <div class="footer">
