Made some important changes to my code

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -96,7 +96,7 @@
         <div class="maindiv">
             <div class="description">
                 <h1>Our Photographers</h1>
-                <p>The following are our photographers who work for the Dans Photography.</p>
+                <p class="describe" >The following are our photographers who work for the Dans Photography.</p>
             </div>
             <div class="people">
                 <div class="photographer1">
