Changed the pathway of my html file.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,156 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <!-- START OF SECTION ONE -->
     <section class="sectionone">
         <div class="centerdiv">
-            <div class="header"></div>
-            <div class="banner"></div>
+            <div class="header">
+                <div class="logo">
+                    <a href="#"><img src="./Images/logo-removebg-preview.png" alt="" height="105"></a>
+                </div>
+                <div class="navbar">
+                    <li> <a href="#">HOME</a> </li>
+                    <li> <a href="#">ABOUT US</a> </li>
+                    <li> <a href="#">OUR ALBUM</a> </li>
+                    <li> <a href="#">BLOG</a> </li>
+                    <li> <a href="#">CONTACT US</a> </li>
+                    <button><a target="_blank" href="https://myalbum.com/album/aPcPC5SPf53K6P/?invite=6f57dd83-8323-4c81-9119-4a50e10762e9">My Work</a></button>
+                </div>
+            </div>
+            <div class="banner">
+                <p>
+                    Hey! Welcome to Dans photography, we are ready <br> to convert your best moments into graphics. <br>Let's Try This.
+                </p>
+                <button><a target="_blank" href="https://myalbum.com/album/aPcPC5SPf53K6P/?invite=6f57dd83-8323-4c81-9119-4a50e10762e9">My Work</a></button>
+            </div>
         </div>
 
     </section>
+    <!-- END OF SECTION ONE -->
+
+    <!-- START OF SECTION TWO -->
+    <section class="sectiontwo">
+        <div class="centerdiv">
+            <h3>Dans Photography Showcase Center</h3>
+            <p>Welcome to Dan's Photography, where every image tells a unique story through the lens of a passionate artist, Dan Smith. With a camera in hand and an eye for capturing the extraordinary in the ordinary, Dan's journey into the world of photography has been nothing short of inspiring.</p>
+            <p class="center">Beyond the lens, Dan is an advocate for the art form he loves. Through workshops, exhibitions, and insightful tutorials, he shares his knowledge and nurtures the budding photographers of tomorrow. His dedication to fostering a community of like-minded individuals is a testament to his belief that photography is not just a medium—it's a language that transcends boundaries and speaks to the soul.</p>
+            <p class="last">Join Dan on this visual odyssey through life's grand tapestry. Every click of his camera shutter echoes with the passion that fuels his creative spirit. As you explore Dan's Photography, be prepared to embark on a sensory journey that celebrates the profound beauty of our world, as seen through the discerning eyes of a remarkable artist.</p>
+            <button>VIEW MORE</button>
+        </div>
+    </section>
+    <!-- END OF SECTION TWO -->
+
+    <!-- START OF SECTION THREE -->
+    <section class="sectionthree">
+        <div class="maindiv">
+            <h1>Our Album</h1>
+            <div class="albumDiv">
+                <div class="upperdiv">
+                    <div class="one">
+                        <div class="Baby">
+                            <p><a target="_blank" href="https://www.pexels.com/search/baby/">Baby Photography</a></p>
+    
+                        </div>
+                    </div>
+                    <div class="two">
+                        <div class="Fashion">
+                            <p><a target="_blank" href="https://www.pexels.com/search/fashion/">Fashion Photography</a></p>
+                        </div>
+                    </div>
+                    <div class="three">
+                        <div class="Graduation">
+                            <p><a target="_blank" href="https://www.pexels.com/search/graduation/">Graduation Photography</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="lowerdiv">
+                    <div class="one">
+                        <div class="Sports">
+                            <p><a target="_blank" href="https://www.pexels.com/search/sports/">Sports Photography</a></p>
+                        </div>
+                    </div>
+                    <div class="two">
+                        <div class="Wedding">
+                            <p><a target="_blank" href="https://www.pexels.com/search/wedding/">Wedding Photography</a></p>
+                        </div>
+                    </div>
+                    <div class="three">
+                        <div class="Wildlife">
+                            <p><a target="_blank" href="https://www.pexels.com/search/wildlife/">Wildlife Photography</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END OF SECTION THREE -->
+
+    <!-- START OF SECTION FOUR -->
+    <section class="sectionfour">
+        <div class="maindiv">
+            <div class="description">
+                <h1>Our Photographers</h1>
+                <p class="describe" >The following are our photographers who work for the Dans Photography.</p>
+            </div>
+            <div class="people">
+                <div class="photographer1">
+                    <img src="./Images/pexels-andrea-piacquadio-3762940.jpg" alt="" height="150" width="150">
+                    <p>Name:Tess Moraa</p>
+                    <p><a href="#"><span>Phone:</span> +25471234566</a></p>
+                    <p><a href="#"><span>Email:</span> tessmoraa33@gmail.com</a></p>
+                    <p>Tess is a highly experienced photographer who has worked for Jay Z for some years. She likes covering live events of celebrities. She also acted as a co-producer in Drakes' Gods Plan. She has a total of 10 albums</p>
+                </div>
+                <div class="photographer2">
+                    <img src="./Images/Indian.jpg" alt="" height="150" width="150">
+                    <p>Name: Abdi Ali</p>
+                    <p><a href="#"><span>Phone:</span> +2547987655</a></p>
+                    <p><a href="#"><span>Email:</span> aliabdi@gmail.com</a></p>
+                    <p>Ali is passionate about wildlife photography. He also does wedding photography and videography. He has been featured by CNN for three times now.By now, He has a total of 14 albums</p>
+                </div>
+                <div class="photographer3">
+                    <img src="./Images/Black_American.jpg" alt="" height="150" width="150">
+                    <p>Name: Jordan Mohammed</p>
+                    <p><a href="#"><span>Phone:</span> +2547127786</a></p>
+                    <p><a href="#"><span>Email:</span> jordanmoha@gmail.com</a></p>
+                    <p>Jordan, who owns a Graphic Design bachelors degree from harvard university makes our work look more interesting. He edits the photos. He has a total of 10 photo albums and 5 video albums.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of section Four -->
+
+    <!-- Start of section Five -->
+    <section class="sectionfive">
+        <div class="centerdiv">
+            <div class="form">
+                <div class="label"><label for=" ">Please enter your Request here:</label></div>
+                <input type="text" placeholder="Enter Your Request here:">
+                <div class="label"><label for=" ">Any Thing You Wish Us to Know;</label></div>
+                <input type="text">
+                <div class="button"><button>Submit</button></div>
+            </div>
+            <div class="contacts">
+                <p>
+                    <strong>Email: </strong>dansphotography@gmail.com <br>
+                    <strong>Phone: </strong>+254719769929 <br>
+                    <strong>Location: </strong>Nairobi, Kenya
+                </p>
+            </div>
+            <div class="media">
+                <a href=""><img src="./Images/facebook.png" alt=""></a>
+                <a href=""><img src="./Images/instagram.png" alt=""></a>
+                <a href=""><img src="./Images/tik-tok.png" alt=""></a>
+                <a href=""><img src="./Images/snapchat.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer">
+            <p> © Dans Photography2023 </p>
+        </div>
+    </section>
+    <!-- End of section five -->
+    <!-- End of the project -->
 </body>
 </html>
